2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (ensure_track_number), (metadata_load):

	Take track number from file name if not in tag.

2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/OverwriteDialog.glade:
	* src/FileUtils.cs:
	* src/OverwriteDialog.cs:

	Improve overwrite dialog some more.

2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Actually, let's just check that we have at least half
	the album.

2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Improved album complete definition:

	if (delta == 0)
		complete = true;
	else if (delta <= max_track_number_difference &&
		 total_n_tracks >= ((delta * 2) + 1))
		complete = true;
	else
		complete = false;

2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* libmuine/Makefile.am:
	* libmuine/metadata.c: (mp4_read_callback), (mp4_seek_callback),
	(assign_metadata_mp4), (metadata_load):

	Add AAC support, patch by Peter Johanson <latexer@gentoo.org>.

	Also made libid3tag support optional.

2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Added 'ro' to ALL_LINGUAS.

2005-01-22  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/ErrorDialog.glade:
	* data/glade/OverwriteDialog.glade:
	* data/glade/ProgressWindow.glade:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/ImportDialog.cs:
	* src/OpenDialog.cs:
	* src/OverwriteDialog.cs:
	* src/PlaylistWindow.cs:
	* src/SaveDialog.cs:

	Improve dialog behaviour, and don't keep glade_xml around
	for the apps lifetime- that's wasting memory.

2005-01-16  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	0.8.1pre1.

2005-01-16  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (signal_idle), (player_open),
	(player_pause), (player_seek):

	Fix some more GTimer borkage.

2005-01-16  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
